--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ div {
 <script>
 
 // Example: San Francisco Yoda statue outside Lucasfilm
-targetLat='37.7987857';
-targetLong='-122.450617';
+targetLat='49.17011642456055';
+targetLong='-123.15011596679688';
 successImage='https://upload.wikimedia.org/wikipedia/en/f/ff/SuccessKid.jpg';
 targetSize = 10; // distance in feet to target for success
 
