--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ window.onload = function() {
 <img id='success-image' src="https://www.petertheobald.com/downloads/1x1white.png">
 <div class="wrapper">
   <div id="distance-feedback">
+	  Monitor this number
   ( )
   </div>
   <div id="error-feedback">
