--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ targetSize = 10; // distance in feet to target for success
 // and pick a target approx. 300 feet East of the player's
 // starting position.
 // (assuming lat. 37.8 N, further or closer at different latitudes)
-demoMode = true;
+demoMode = false;
 demoModeDistance = 0.0003; // approx. 300 feet East at 38N
 
 const options = {
